<?xml version="1.0"?>
<package format="2">
  <name>uhvat_control</name>
  <version>1.4.0</version>
  <description>A package containing controllers</description>
  <maintainer email="some@some.com">Some Some</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>effort-controllers</depend>

</package>
